--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
     "@angular/core": "~9.0.0",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.0.0",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.2.1",
+    "angularfire2": "^5.4.2",
+    "bootstrap": "^4.4.1",
+    "firebase": "^7.8.1",
+    "font-awesome": "^4.7.0",
+    "ngx-toastr": "^12.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
