--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/architect": "^0.900.1",
     "@angular/animations": "~9.0.0",
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
@@ -21,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
+    "angular2-flash-message": "1.0.8",
     "angularfire2": "^5.4.2",
     "bootstrap": "^4.4.1",
     "firebase": "^7.8.1",
@@ -28,6 +30,7 @@
     "ngx-toastr": "^12.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "tether": "1.4.7",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
